; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_wstrstri.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_wstrstri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @wstrstri(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %9, %2
  store i32* null, i32** %3, align 8
  br label %31

13:                                               ; preds = %9
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @wcslen(i32* %14)
  store i64 %15, i64* %6, align 8
  br label %16

16:                                               ; preds = %25, %13
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i64 @wstrcmpi_n(i32* %17, i32* %18, i64 %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32*, i32** %4, align 8
  store i32* %23, i32** %3, align 8
  br label %31

24:                                               ; preds = %16
  br label %25

25:                                               ; preds = %24
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds i32, i32* %26, i32 1
  store i32* %27, i32** %4, align 8
  %28 = load i32, i32* %26, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %16, label %30

30:                                               ; preds = %25
  store i32* null, i32** %3, align 8
  br label %31

31:                                               ; preds = %30, %22, %12
  %32 = load i32*, i32** %3, align 8
  ret i32* %32
}

declare dso_local i64 @wcslen(i32*) #1

declare dso_local i64 @wstrcmpi_n(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
